--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,6 +9,7 @@
     --visualizer-bg: #25272f1b;
     --visualizer-blur: 5px;
     --player-height: 130px;
+    --player-mobile-bonus-height: 30px;
     --playlist-width: 300px;
 }
 
@@ -122,7 +123,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 input[type="range"]:hover::-webkit-slider-thumb {
-    transform: scale(1.2);
+    transform: scale(1.1);
     visibility: visible;
 }
 
