--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -17,7 +17,7 @@
         right: 0;
         height: calc(var(--player-height) + var(--player-mobile-bonus-height));
         background-color: #333;
-        padding: 12px 24px var(--player-mobile-bonus-height) 24px;
+        padding: 12px 24px 24px 24px;
     }
 
     /* Progress timeline */
