--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
     width: var(--playlist-width);
     background-color: rgba(50, 50, 50, 0.8);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px) ;
     transition: all 0.25s ease;
     padding-top: 24px;
     z-index: 1;
