--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -24,7 +24,8 @@
         width: 250px;
         height: 125px;
         background-color: rgba(50, 50, 50, 0.5);
-        backdrop-filter: blur(15px);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: (10px);
         border-radius: 3px;
         text-align: center !important;
         display: flex;
@@ -133,11 +134,25 @@
         color: var(--color-primary);
     }
 
+    .play__mobile--btn.active,
+    .pause__mobile--btn.active {
+        display: block;
+    }
+    .play__mobile--btn,
+    .pause__mobile--btn {
+        display: none;
+    }
+
     /* Playlist CSS */
     .playlist {
         height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
+        left: -100% !important;
+        height: 100%;
+    }
+    .playlist.show {
+        left: 0 !important;
     }
 
     /* Lyric CSS */
