--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -155,6 +155,7 @@
         backdrop-filter: blur(10px);
         left: -100% !important;
         height: 100%;
+        transition: all 0.25s ease;
     }
 
     .playlist.show {
