--- a/assets/css/player.css
+++ b/assets/css/player.css
@@ -15,6 +15,7 @@
     z-index: 2;
     backdrop-filter: blur(10px);
     transition: all 0.3s ease;
+    box-shadow: 0 0 5px #333;
 }
 
 .playing.hide {
