--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -67,19 +67,21 @@
         left: 0;
         right: 0;
         height: calc(var(--player-height) + var(--player-mobile-bonus-height));
-        /* background-color: #333; */
-        padding: 6px 24px 24px 24px;
+        background-color: rgba(128, 128, 128, 0.2);
+        padding: 12px 24px 24px 24px;
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
     }
 
     /* Progress timeline */
     .playing__mobile--progress {
         width: 100% !important;
-        height: 3px !important;
+        height: 4px !important;
         margin: 0 !important;
     }
 
     .playing__mobile--progress:hover {
-        height: 3px !important;
+        height: 4px !important;
     }
 
     .playing__mobile--timeline {
