--- a/assets/css/player.css
+++ b/assets/css/player.css
@@ -7,12 +7,12 @@
     right: 0;
     top: calc(100% - var(--player-height));
     height: var(--player-height);
-    background-color: rgba(50, 50, 50, 0.4);
+    background-color: #303030;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 8px 16px;
-    z-index: 2;
+    z-index: 2000;
     backdrop-filter: blur(10px);
     transition: all 0.3s ease;
     box-shadow: 0 0 5px #333;
@@ -44,12 +44,12 @@
 
 .playing__info .playing__desc--text {
     margin-left: 12px;
-    flex: 0.5;
+    flex: 0.8;
 }
 
 .playing__info .playing__song--name {
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     color: var(--color-white);
     width: 100%;
     word-spacing: 3px;
@@ -57,12 +57,12 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
-    margin-bottom: 12px;
+    margin-bottom: 6px;
 }
 
 .playing__info .playing__artist--name {
-    font-size: 1.4rem;
-    color: var(--text-color-default);
+    font-size: 1.1rem;
+    color: var(--color-gray);
     margin: 4px 0;
     overflow: hidden;
     display: -webkit-box;
@@ -234,9 +234,11 @@
     height: calc(100vh - var(--player-height));
     background-color: var(--visualizer-bg);
     backdrop-filter: blur(var(--visualizer-blur));
+    -webkit-backdrop-filter: blur(var(--visualizer-blur));
     transition: all 0.6s ease;
     opacity: 0;
     display: flex;
+    z-index: 1000;
 }
 
 .player .visualizer.active {
@@ -432,5 +434,106 @@
     opacity: 0.15;
 }
 
+/* Playlist CSS */
 
+.playlist {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 100%;
+    height: calc(100vh - var(--player-height));
+    width: var(--playlist-width);
+    background-color: #303030;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px) ;
+    transition: all 0.3s ease;
+    padding-top: 24px;
+    z-index: 1001;
+    overflow-y: scroll;
+}
+
+.playlist::-webkit-scrollbar {
+    display: block;
+}
+
+.playlist.show {
+    left: calc(100vw - var(--playlist-width));
+}
+
+.playlist.full {
+    height: 100vh;
+}
+
+.playlist .song__wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.song__wrap {
+    border-radius: 5px;
+}
+
+.song__wrap:hover {
+    background-color: rgba(128, 128, 128, 0.5) !important;
+}
+
+.song__wrap .song__thumb {
+    position: relative;
+    max-height: 60px;
+    max-width: 60px;
+}
+
+.song__thumb:hover .playing__button--play {
+    opacity: 1;
+}
+
+.song__wrap .song__thumb--img {
+    width: 60px;
+    height: 60px;
+    border-radius: 3px;
+}
+
+.song__wrap .song__thumb::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.15);
+    z-index: 0;
+}
+
+.song__wrap .song__info {
+    flex: 0.95;
+    margin: 0 24px 0 10px;
+}
+
+.song__info .song__info--name {
+    overflow: hidden;
+    font-size: 1.5rem;
+    color: var(--color-white);
+    margin-bottom: 6px;
+    font-weight: 500;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+}
+
+.song__info .song__info--artist {
+    overflow: hidden;
+    font-size: 1.3rem;
+    color: var(--color-gray);
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+}
+
+.song__option {
+    align-self: bottom;
+}
 
