--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -587,7 +587,7 @@ input:checked + label:after {
     font-size: 1.4rem;
     transition: all 0.3s ease;
     border: none;
-    border-bottom: 1px solid var(--color-gray);
+    border-bottom: 1px dashed var(--color-gray);
     opacity: 0.6;
 }
 
@@ -596,7 +596,7 @@ input:checked + label:after {
 }
 
 .form__group input[type="text"]:focus {
-    border-bottom: 1px solid rgba(175, 255, 50, 0.5);
+    border-bottom: 1px dashed rgba(175, 255, 50, 0.5);
     opacity: 1;
 }
 
