--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,41 @@
     opacity: 0.8;
 }
 
+.sidebar__upgrade {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 12px auto;
+    border-radius: 10px;
+    width: 90%;
+    height: 100px;
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
+    opacity: 0.8;
+}
+
+.upgrade__wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.upgrade__text {
+    font-size: 1.4rem;
+    margin-bottom: 12px;
+}
+
+.upgrade__button {
+    padding: 8px 12px;
+    border-radius: 35px;
+    width: 80%;
+    background-image: linear-gradient( 109.6deg,  rgba(255,179,189,1) 1.8%, rgba(254,248,154,1) 50.6%, rgba(161,224,186,1) 100.3% );
+    cursor: pointer;
+    color: var(--color-black);
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
 /* Header CSS */
 
 .header {
