--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -63,6 +63,7 @@
         left: 0;
         right: 0;
         /* height: calc(var(--player-height) + var(--player-mobile-bonus-height)); */
+        height: 150px;
         background-color: var(--bg-color-default);
         padding: 12px 24px 24px 24px;
         z-index: 10;
@@ -175,7 +176,8 @@
     .visualizer {
         width: 100% !important;
         padding: 0 24px;
-        height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
+        /* height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important; */
+        height: calc(100% - 150px) !important;
     }
 
     .visualizer__setting {
