--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -59,11 +59,9 @@
     /* Playing */
     .playing__mobile {
         position: fixed;
-        bottom: 0;
         left: 0;
         right: 0;
-        /* height: calc(var(--player-height) + var(--player-mobile-bonus-height)); */
-        height: 150px;
+        top: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
         background-color: var(--bg-color-default);
         padding: 12px 24px 24px 24px;
         z-index: 10;
@@ -149,7 +147,6 @@
 
     /* Playlist CSS */
     .playlist {
-        height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         left: -100% !important;
@@ -176,8 +173,7 @@
     .visualizer {
         width: 100% !important;
         padding: 0 24px;
-        /* height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important; */
-        height: calc(100% - 150px) !important;
+        height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
     }
 
     .visualizer__setting {
