--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -61,10 +61,11 @@
         position: fixed;
         left: 0;
         right: 0;
-        top: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
+        bottom: 0;
+        max-height: calc(var(--player-height) + var(--player-mobile-bonus-height));
         background-color: var(--bg-color-default);
         padding: 12px 24px 24px 24px;
-        z-index: 10;
+        z-index: 50;
     }
 
     /* Progress timeline */
@@ -152,6 +153,7 @@
         left: -100% !important;
         height: 100%;
         transition: all 0.25s ease;
+        padding: 24px 0;
     }
 
     .playlist.show {
@@ -173,6 +175,7 @@
     .visualizer {
         width: 100% !important;
         padding: 0 24px;
+        z-index: 20 !important;
         height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
     }
 
@@ -197,6 +200,7 @@
     .header {
         width: 100%;
         padding: 0 12px;
+        z-index: 15;
     }
 
     .header__search {
