--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -175,8 +175,9 @@
     .visualizer {
         width: 100% !important;
         padding: 0 24px;
-        z-index: 20 !important;
+        z-index: 53 !important;
         height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
+        max-height: calc(100% - 150px);
     }
 
     .visualizer__setting {
@@ -200,7 +201,7 @@
     .header {
         width: 100%;
         padding: 0 12px;
-        z-index: 15;
+        z-index: 52;
     }
 
     .header__search {
@@ -223,7 +224,7 @@
         width: 70%;
         bottom: 0;
         height: auto;
-        z-index: 11;
+        z-index: 51;
     }
     .sidebar.active {
         left: 0;
