--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -61,8 +61,7 @@
         position: fixed;
         left: 0;
         right: 0;
-        bottom: 0;
-        height: calc(var(--player-height) + var(--player-mobile-bonus-height));
+        top: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
         background-color: var(--bg-color-default);
         padding: 12px 24px 24px 24px;
         z-index: 50;
