--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -61,7 +61,8 @@
         position: fixed;
         left: 0;
         right: 0;
-        top: calc(100% - var(--player-height) - var(--player-mobile-bonus-height));
+        bottom: 0;
+        height: calc(var(--player-height) + var(--player-mobile-bonus-height));
         background-color: var(--bg-color-default);
         padding: 12px 24px 24px 24px;
         z-index: 50;
@@ -233,6 +234,7 @@
         left: 0;
         width: 100%;
         padding: 0 24px;
+        overflow: scroll;
     }
 
     /* Header User CSS */
