--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -177,7 +177,8 @@
         width: 100% !important;
         padding: 0 24px;
         z-index: 53 !important;
-        height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
+        height: auto !important;
+        max-height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
     }
 
     .visualizer__setting {
