--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -74,7 +74,6 @@
         width: 100% !important;
         height: 4px !important;
         margin: 0 !important;
-        margin-top: 4px !important;
     }
 
     .playing__mobile--progress:hover {
@@ -178,8 +177,7 @@
         width: 100% !important;
         padding: 0 24px;
         z-index: 53 !important;
-        height: auto !important;
-        max-height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height)) !important;
+        height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height) - 2px) !important;
     }
 
     .visualizer__setting {
