--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,11 @@
     padding: 10px 25px;
     font-size: 1.4rem;
     font-weight: 600;
+    cursor: pointer;
+}
+
+.sidebar__item:hover {
+    background-color: #434343;
 }
 
 .sidebar__item i {
@@ -60,7 +65,7 @@
     border-radius: 10px;
     width: 90%;
     height: 100px;
-    background-image: linear-gradient(to right, #434343 0%, black 100%);
+    background-image: linear-gradient(to right, #434343 0%, #292929 100%);
     opacity: 0.8;
 }
 
@@ -80,7 +85,7 @@
     padding: 8px 12px;
     border-radius: 35px;
     width: 80%;
-    background-image: linear-gradient( 109.6deg,  rgba(255,179,189,1) 1.8%, rgba(254,248,154,1) 50.6%, rgba(161,224,186,1) 100.3% );
+    background-image: linear-gradient( 129.1deg,  rgba(243,199,83,1) 26.8%, rgba(18,235,207,1) 114.1% );
     cursor: pointer;
     color: var(--color-black);
     font-size: 1.2rem;
