--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -205,6 +205,15 @@ input:checked+label:after {
     transform: translateX(-100%);
 }
 
+/* Input Type File */
+
+input[type="file"] {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    display: none;
+}
+
 /* Scrollbar */
 
 ::-webkit-scrollbar-track {
