--- a/assets/css/player.css
+++ b/assets/css/player.css
@@ -283,7 +283,7 @@
     width: 380px;
     height: 380px;
     border-radius: 50%;
-    border: 5px solid rgba(128, 128, 128, 50%);
+    border: 5px solid rgba(50, 50, 50, 0.15);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.35);
     cursor: pointer;
 }
