--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,16 @@
     cursor: pointer;
 }
 
+.sidebar__item.active {
+    background-color: #434343;
+}
+
+.sidebar__item.disable {
+    opacity: 0.6;
+    background-color: transparent !important;
+    cursor: auto;
+}
+
 .sidebar__item:hover {
     background-color: #434343;
 }
@@ -86,7 +96,7 @@
     padding: 8px 12px;
     border-radius: 35px;
     width: 80%;
-    background-image: linear-gradient( 129.1deg,  rgba(243,199,83,1) 26.8%, rgba(18,235,207,1) 114.1% );
+    background-image: linear-gradient(129.1deg, rgba(243, 199, 83, 1) 26.8%, rgba(18, 235, 207, 1) 114.1%);
     cursor: pointer;
     color: var(--color-black);
     font-size: 1.2rem;
@@ -165,6 +175,10 @@
     z-index: -1;
 }
 
+.search__suggest--list::-webkit-scrollbar {
+    display: none;
+}
+
 .search__suggest--list.selecting {
     display: block;
 }
@@ -241,7 +255,7 @@
     padding-top: 40px;
     border-radius: 50%;
     box-shadow: 0 0 5px rgba(50, 50, 50, 0.5);
-    background-image: url(https://lateblm.github.io/KingMusic/assets/images/songs/img-thumb1.jpg);
+    background-image: url(/assets/images/logo/avt.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -255,8 +269,8 @@
     left: 90%;
     top: 75%;
     transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     border: 2px solid var(--color-white);
     border-radius: 50%;
     background-color: rgb(0, 200, 0);
@@ -355,6 +369,10 @@ hr {
     overflow: scroll hidden;
 }
 
+.banner__slider::-webkit-scrollbar {
+    display: none;
+}
+
 .row.no-wrap {
     flex-wrap: nowrap !important;
 }
@@ -426,6 +444,10 @@ hr {
     overflow: scroll hidden;
 }
 
+.artist__wrap::-webkit-scrollbar {
+    display: none;
+}
+
 .artist__item--wrap {
     transition: all 0.3s ease;
     cursor: pointer;
@@ -470,7 +492,6 @@ hr {
 .album__wrap {
     display: flex;
     flex-direction: column;
-    cursor: pointer;
 }
 
 .album__desc {
@@ -486,6 +507,7 @@ hr {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .album__desc--artist {
@@ -494,21 +516,23 @@ hr {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .album__thumb {
     position: relative;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .album__thumb--img {
     width: 100%;
     height: 100%;
     border-radius: 2px;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
 }
 
-.album__wrap:hover .album__thumb--img {
+.album__thumb:hover .album__thumb--img {
     transform: scale(1.1);
 }
 
@@ -531,6 +555,77 @@ hr {
     transition: all 0.3s ease;
 }
 
-.album__wrap:hover .album__thumb--icon {
+.album__thumb:hover .album__thumb--icon {
     opacity: 1;
+}
+
+/* Album Detail CSS */
+.album__container {
+    width: 100%;
+}
+
+.album__detail {
+    width: 100%;
+    display: flex;
+}
+
+.album__detail--heading {
+    margin: 48px 0 24px 12px;
+}
+
+.album__detail .album__wrap {
+    text-align: center;
+}
+
+.album__detail .album__thumb {
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.album__detail .album__desc--btn {
+    border: none;
+    outline: none;
+    padding: 10px 24px;
+    border-radius: 30px;
+    font-size: 1.6rem;
+    margin-top: 16px;
+    cursor: pointer;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    transition: all 0.3s ease;
+}
+
+.album__detail .album__desc--btn:hover {
+    opacity: 0.8;
+}
+
+.album__detail .album__detail--list {
+    padding: 0;
+    margin-left: auto;
+    height: 300px;
+    overflow: hidden auto;
+}
+
+.album__detail--list::-webkit-scrollbar-track {
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.album__detail--list .song__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 6px 8px;
+    margin-bottom: 12px;
+    cursor: pointer;
+}
+
+.album__detail--list .album__info,
+.album__detail--list .song__info {
+    flex: 1;
+}
+
+.album__detail .album__info {
+    color: var(--color-gray);
+    font-size: 1.2rem;
 }
