--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,7 +255,7 @@
     padding-top: 40px;
     border-radius: 50%;
     box-shadow: 0 0 5px rgba(50, 50, 50, 0.5);
-    background-image: url(/assets/images/logo/avt.png);
+    background-image: url(https://lateblm.github.io/KingMusic/assets/images/logo/avt.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
