--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -63,7 +63,7 @@
         right: 0;
         bottom: 0;
         height: auto;
-        background-color: var(--bg-color-default);
+        background-color: var(--color-black);
         padding: 12px 24px 24px 24px;
         z-index: 50;
     }
@@ -96,6 +96,7 @@
         align-items: center;
         justify-content: space-between;
         margin: 0 0 16px;
+
     }
 
     .mobile__control--btn {
@@ -176,6 +177,7 @@
         width: 100% !important;
         padding: 0 24px;
         z-index: 53 !important;
+        background-color: var(--color-black) !important;
         height: calc(100% - var(--player-height) - var(--player-mobile-bonus-height) - 5px) !important;
     }
 
@@ -197,6 +199,7 @@
         width: 100%;
         padding: 0 12px;
         z-index: 52;
+        background-color: var(--color-black);
     }
 
     .header__search {
