--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -1,5 +1,5 @@
-/* Mobile */
-@media (max-width: 739px) {
+/* Mobile and Tablet */
+@media (max-width: 1024px) {
 
     h5 {
         margin: 0;
@@ -158,6 +158,7 @@
         backdrop-filter: blur(10px);
         left: -100% !important;
         height: 100%;
+        width: 70% !important;
         transition: none !important;
         padding: 24px 0;
     }
@@ -222,7 +223,7 @@
     }
 
     .header__search {
-        width: 90%;
+        width: 100%;
     }
 
     .header__mobile--bars i {
@@ -318,7 +319,8 @@
 
 }
 
-@media (min-width: 740px) {
+/* PC */
+@media (min-width: 1025px) {
     .hide-pc {
         display: none !important;
     }
