--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -523,17 +523,17 @@ hr {
     position: relative;
     overflow: hidden;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 .album__thumb--img {
     width: 100%;
     height: 100%;
-    border-radius: 2px;
     transition: all 0.5s ease;
 }
 
 .album__thumb:hover .album__thumb--img {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .album__thumb--icon {
@@ -573,13 +573,14 @@ hr {
     margin: 48px 0 24px 12px;
 }
 
-.album__detail .album__wrap {
+.album__detail--wrap {
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .album__detail .album__thumb {
     border-radius: 5px;
-    overflow: hidden;
 }
 
 .album__detail .album__desc--btn {
@@ -590,13 +591,14 @@ hr {
     font-size: 1.6rem;
     margin-top: 16px;
     cursor: pointer;
-    background-color: var(--color-primary);
-    color: var(--color-white);
-    transition: all 0.3s ease;
+    background-color: var(--color-white);
+    color: var(--color-black);
+    transition: all 0.3s linear;
 }
 
 .album__detail .album__desc--btn:hover {
-    opacity: 0.8;
+    background-color: var(--text-color-default);
+
 }
 
 .album__detail .album__detail--list {
