--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,6 +101,13 @@
     color: var(--color-black);
     font-size: 1.2rem;
     font-weight: 600;
+    transition: all 0.3s ease;
+    opacity: 0.8;
+
+}
+
+.upgrade__button:hover {
+    opacity: 1;
 }
 
 /* Header CSS */
@@ -594,6 +601,11 @@ hr {
     background-color: var(--color-white);
     color: var(--color-black);
     transition: all 0.3s linear;
+}
+
+.album__detail .album__desc--btn i {
+    font-size: 2.4rem;
+    vertical-align: middle;
 }
 
 .album__detail .album__desc--btn:hover {
