--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -20,8 +20,8 @@
         width: 250px;
         height: 125px;
         background-color: rgba(50, 50, 50, 0.5);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: (10px);
+        backdrop-filter: blur(25px);
+        -webkit-backdrop-filter: (25px);
         border-radius: 3px;
         text-align: center !important;
         display: flex;
@@ -54,6 +54,10 @@
 
     .mobile__volume--progress:hover {
         height: 3px !important;
+    }
+
+    .mobile__volume--value {
+        min-width: 25px;
     }
 
     /* Playing */
