--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,10 +85,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 6px;
 }
 
 .upgrade__text {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-bottom: 12px;
 }
 
@@ -103,7 +104,6 @@
     font-weight: 600;
     transition: all 0.3s ease;
     opacity: 0.8;
-
 }
 
 .upgrade__button:hover {
