--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
     top: 0;
     width: 240px;
     background-color: #303030;
-    height: calc(100vh - var(--player-height));
+    height: calc(100% - var(--player-height));
     transition: all 0.3s ease;
     z-index: 1;
 }
